--- a/CSharp7/CSharp7.csproj
+++ b/CSharp7/CSharp7.csproj
@@ -83,6 +83,7 @@
     <Compile Include="1. Async Main\AsyncMain.cs" />
     <Compile Include="2. Tuples\SimpleTuples.cs" />
     <Compile Include="2. Tuples\TuplesAreFun.cs" />
+    <Compile Include="3. Local Functions\LocalFunctions.cs" />
     <Compile Include="Util\ApplicationChooser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
