--- a/CSharp7/CSharp7.csproj
+++ b/CSharp7/CSharp7.csproj
@@ -85,6 +85,7 @@
     <Compile Include="2. Tuples\TuplesAreFun.cs" />
     <Compile Include="3. Local Functions\LocalFunctions.cs" />
     <Compile Include="4. Pattern Matching\PatternMatching.cs" />
+    <Compile Include="5. Out Vars\OutVars.cs" />
     <Compile Include="Util\ApplicationChooser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
