--- a/UmbracoSite/Web.config
+++ b/UmbracoSite/Web.config
@@ -61,8 +61,7 @@
 
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="AppData" />
-    <!--<add key="Umbraco.ModelsBuilder.LanguageVersion" value="CSharp6" />-->
-    <add key="Umbraco.ModelsBuilder.LanguageVersion" value="CSharp7" />
+    <add key="Umbraco.ModelsBuilder.LanguageVersion" value="CSharp7_1" />
 
   </appSettings>
   <connectionStrings>
